added logomark (non-animated)

--- a/app/views/base_products/show.html.erb
+++ b/app/views/base_products/show.html.erb
@@ -113,6 +113,10 @@
 				
 				<!-- breadcrumb trail ———————————————————————————————————————————————————— -->
 				<%= render :partial => "/shared/breadcrumb" %>
+				
+				<!-- logo_container ————————————————————————————————————————— -->
+				<div id="logo">
+				</div>
 			
 				<!-- error messages —————————————————————————————————————————————————————— -->
 				<div id="error-messages" style="display:none">
@@ -214,11 +218,5 @@
 			
 		</div> <!-- end div#center_column  -->
 
-
-	<!-- logo_container ——————————————————————————————————————————————————————————————— -->
-
-	<div id="logo_container">
-		<a href="/en" id="logo" title="home page" name="logo">&nbsp;</a>
-	</div>
 
 <% end %>
