--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -122,6 +122,10 @@
 				
 				<!-- breadcrumb trail ————————————————————————————————————————— -->
 				<%= render(:partial => "/shared/breadcrumb") %>
+				
+				<!-- logo_container ————————————————————————————————————————— -->
+				<div id="logo">
+				</div>
 			
 				<!-- error messages ——————————————————————————————————————————— -->
 				<div id="error-messages" style="display:none">
@@ -226,10 +230,6 @@
 			</div> <!-- end div#product_goodies -->
 			</div> <!-- end div#center_column -->
 
-	<!-- logo_container ——————————————————————————————————————————————————————————————— -->
 
-	<div id="logo_container">
-		<a href="/en" id="logo" title="home page" name="logo">&nbsp;</a>
-	</div>
 
 <% end %>
