--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -89,6 +89,7 @@
 	</script>
 
 	<style type="text/css">
+		
 		/* div#product_goodies {max-height:625px; overflow-y:auto; padding-right:20px; margin-top:5px;} */
 		div#product_image_description { margin-top:20px; padding-left:40px;}
 
@@ -149,9 +150,6 @@
 
 <%= content_for(:middleBand) do %>
 
-		<div id="body-background">	
-			<!-- <# image_tag(...) %> -->
-		</div>
     
 		<div id="left_column">
 
@@ -162,12 +160,16 @@
 			<%= render(:partial => 'shared/featuredProducts') %>
 
 		</div><!-- end of div 'left_column' -->
+		
 
+		
 		<div id="center_column">
 				
 				<!-- breadcrumb trail ————————————————————————————————————————— -->
 				<%= render(:partial => "/shared/breadcrumb") %>
 				
+				<!-- logo_container ————————————————————————————————————————— -->
+				<div id="logo"></div> 
 			
 				<!-- error messages  ———————————————————————————————————————————————————— -->
 				<div id="error-messages" style="display:none">
@@ -286,12 +288,6 @@
 
 			</div> <!-- end div#center_column -->
 
-
-	<!-- logo_container ——————————————————————————————————————————————————————————————— -->
-
-	<div id="logo_container">
-		<a href="" id="logo" title="home page" name="logo">home page</a>
-	</div>
 
 <% end %>
 	
