logomark as live link to home page

--- a/app/views/leaf_categories/show.html.erb
+++ b/app/views/leaf_categories/show.html.erb
@@ -183,7 +183,10 @@
 				<%= render :partial => "/shared/breadcrumb" %> 
 				
 				<!-- logo_container ————————————————————————————————————————— -->
-				<div id="logo"></div>
+				<div id="logo">
+					<% logomark = image_tag("logos/logo_on_white_315.jpg") %>
+					<%= link_to(logomark,root_path()) %>
+				</div>
 				
 				<!-- Error Messages ———————————————————————————————————————— -->
 				<div id="error-messages" style="display:none"></div>			
