--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -126,6 +126,8 @@
 				
 				<!-- logo_container ————————————————————————————————————————— -->
 				<div id="logo">
+					<% logomark = image_tag("logos/logo_on_white_315.jpg") %>
+					<%= link_to(logomark,root_path()) %>
 				</div>
 			
 				<!-- error messages ——————————————————————————————————————————— -->
