--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -57,6 +57,12 @@
 
 			<div id="main_content">
 				
+				<!-- logo_container ————————————————————————————————————————— -->
+				<div id="logo">
+					<% logomark = image_tag("logos/logo_on_white_315.jpg") %>
+					<%= link_to(logomark,root_path()) %>
+				</div>
+				
 				<div id="error-messages" style="display:none">
 					<div class="messages error"></div>
 				</div>
