--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -170,7 +170,10 @@
 				<%= render(:partial => "/shared/breadcrumb") %>
 				
 				<!-- logo_container ————————————————————————————————————————— -->
-				<div id="logo"></div> 
+				<div id="logo">
+					<% logomark = image_tag("logos/logo_on_white_315.jpg") %>
+					<%= link_to(logomark,root_path()) %>
+				</div> 
 			
 				<!-- error messages  ———————————————————————————————————————————————————— -->
 				<div id="error-messages" style="display:none">
