--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -155,7 +155,7 @@
 					</div>
 					
 					<div id="shipping_etc_icons">
-							<%= if @product_set.method_of_shipment == 'LTL' then image_tag("utility/truck_46x24.gif",:class => "withToolTip", :title => "shipped by truck") end %>
+							<%= if @product_set.method_of_shipment == 'LTL' || @product_set.method_of_shipment == 'VAN LINE' then image_tag("utility/truck_46x24.gif",:class => "withToolTip", :title => "shipped by truck") end %>
 							<%= if @product_set.assembly_p == 1 then image_tag("utility/wrench_24x24.gif",:class=>"withToolTip",:title => "some assembly required") end %>
 							<%= if @product_set.latex_p == 1 then image_tag("utility/latex_free_49x49.gif") end %>
 					</div>
