on mouseout of popup overlay blackscreen fads more slowly 1000ms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -262,7 +262,7 @@
 					
 					$(".popup_base").mouseleave(function(){
 						$(".popup_base:visible").hide();
-						$("#black_screen").fadeOut();
+						$("#black_screen").fadeOut(1000); 
 						return false;
 					})
 				
