--- a/app/views/product_sets/show.html.erb
+++ b/app/views/product_sets/show.html.erb
@@ -142,7 +142,7 @@
 				<div id="product_goodies"> <!-- so can scroll vertically if too deep -->
 				<div id="product_image_description">
 					<!-- change to large picture --> 
-					<%= image_tag("/images/products/all_large/" + @product_set.image_filename[0,6] +"-000" + ".jpg") %>
+					<%= image_tag("/images/products/all_large/" + @product_set.image_filename[0,6] +"-000" + ".jpg",:style => "height:250px;") %>
 					<!--
 					<%# image_tag("/images/products/all_medium/" + @base_product.image_filename[0,6] + "-000" + ".jpg") %>
 					-->
