--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -188,7 +188,7 @@
 				<div id="product_goodies">
 				<div id="product_image_description">
 					
-					<%= image_tag("/images/products/all_large/" + @product_type.image_filename + ".jpg") %>
+					<%= image_tag("/images/products/all_large/" + @product_type.image_filename + ".jpg",:style => "height:250px;") %>
 					<div id="title">
 						<%= raw(@product_type.name) %>
 					</div>
