--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -119,7 +119,7 @@
 					<div id="error-messages" style="display:none"></div>
 					
 					<!-- Breadcrumb ———————————————————————————————————————————— -->
-					<%= render :partial => "/shared/breadcrumb" %>
+					<%= render :partial => "/shared/breadcrumb_for_categories" %>
 
 					<!-- logo_container ————————————————————————————————————————— -->
 					<div id="logo">
