--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -171,7 +171,7 @@
 											<div class="product">
 												<a href='<%= product_set_path(p.id) %>'>			
 													<div class="pic">
-														<%= image_tag("/images/products/all_small/" + p.image_filename + ".jpg") %>
+														<%= image_tag("/images/products/all_small/" + p.image_filename[0,6] + "-000" + ".jpg") %> <!-- WHY? Because image_filenames in products table have the -00n ending of the tms-product-id, but the image files in images/products/all_small all end in -000 -->
 													</div>			
 													<div class="productName"><%= sanitize(p.name[0,44]) %></div>
 												</a>
