small UI changes

--- a/app/views/home/_slides_local.html.erb
+++ b/app/views/home/_slides_local.html.erb
@@ -44,7 +44,7 @@
 			<div class="royalCaption" style="left:320px; top:140px; width:600px; text-align:left; color:black;">
 				<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >TABLES & TRACTION</div>
 				<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8">Treatment Tables, Mat Tables Work Tables, Traction Products, Positioning Products</div>
-				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(43) %>">more</a></div>
+				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(43) %>">More</a></div>
 			</div>
 		</li>
 		
@@ -54,7 +54,7 @@
 			<div class="royalCaption" style="left:330px; top:140px; width:600px; text-align:left; color:black;">
 				<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >FITNESS</div>
 				<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Treadmills, Exercise Bikes, Elliptical Trainers, </br>All Body & Upper Body Exercisers, Fitness Equipment</div>
-				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(59) %>">more</a></div>
+				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(59) %>">More</a></div>
 			</div>
 		</li>
 		
@@ -66,7 +66,7 @@
 			<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 				<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >ORTHOPEDICS</div>
 				<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Splinting Materials & Supplies, Supports including Hand & Wrist, </br>Elbow, Lumbar, Cervical Collars, Knee, Ankle</div>
-				<div class="royalCaptionItem sgSmallText more" data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(70) %>">more</a></div>
+				<div class="royalCaptionItem sgSmallText more" data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(70) %>">More</a></div>
 			</div>
 		</li>
 		
@@ -76,7 +76,7 @@
 			<div class="royalCaption" style="left:360px; top:140px; width:600px; text-align:left; color:black;">
 				<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >ATC/TAPING</div>
 				<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Taping & Wrapping Supplies, First-Aid, ATC Products</div>
-				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(81) %>">more</a></div>
+				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(81) %>">More</a></div>
 			</div>
 		</li>
 		
@@ -86,7 +86,7 @@
 			<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 				<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >EVALUATION</div>
 				<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Evaluation products including; Strength, Pulse, Range of Motion, </br>Sensory, Weight</div>
-				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(86) %>">more</a></div>
+				<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(86) %>">More</a></div>
 			</div>	
 		</li>	
 		
