--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,10 +59,6 @@ Unknowns:
 						slideshowPauseOnHover: false  
 								
 		    });
-	
-		 		// carryovers from Mavics code: to handle homeslide on homepage; drop?
-				// checkSize(); // does what? 
-				// homeCheckSize(); // does what? 
 				
 		});
 	</script>	
@@ -79,7 +75,7 @@ Unknowns:
 
 	<style type="text/css">
 		/* #banner-rotator { height: 800px; overflow:hidden; border:none; margin-left:0px; } */
-		.moreButton { background-color:gainsboro; color:black; padding:5px 10px 5px 10px;}
+		.moreButton { background-color:#FFA500; color:white; padding:5px 10px 5px 10px;}
 		li.royalSlide a:hover { background-color:black; color:white;}
 		
 	</style>
@@ -90,12 +86,12 @@ Unknowns:
 	-->
 	<!-- override the declarations in stylesheets/left_nav_popups.css now on Amazon S3 with a far forward expires header; may have to defeat overflow, and height-->
 	<style type="text/css">
-		.bold { font-weight: bold; color:black; }
+		.bold { font-weight: bold; }
 		#popup_trumedical {top:44px; background-color:#0094DE; color:white; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
 		#popup_patients {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; } 
 		#popup_providers {top:44px; background-color:white; color:#0094DE; padding-top:25px; padding-bottom:30px; height:auto; overflow:visible; }
-		#popup_payors {top:44px; background-color:yellow; color:black; padding-top:25px; padding-bottom:30px;height:auto; overflow:visible; }
-		#popup_payors h2 { color: #0094DE; }
+		#popup_payors {top:44px; background-color:orange; color:black; padding-top:25px; padding-bottom:30px;height:auto; overflow:visible; }
+		#popup_payors h2 { color: black; }
 
 	</style>
 
