--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -320,7 +320,7 @@
 			<div id="header">
 				<div id="register_login">
 					<ul>
-							<li><%= link_to "Home   ", home_index_path %> </li>
+							<!-- <li><#= link_to "Home   ", home_index_path %> </li> -->
 						<% if user_signed_in? %>
 							<li>
 								<span style="color:orange";>Signed in as <%= current_user.email %>. Not you?&nbsp; </span>
