--- a/app/views/home/_menu_home_colored.html.erb
+++ b/app/views/home/_menu_home_colored.html.erb
@@ -52,24 +52,24 @@
 
 		<!-- menu item: TRUMEDICAL ————————————————— -->
 		<a class="level1 helvetica" href="#" id="trumedical"  style="color:#0094DE!important;">
-			<img src="/images/menus/square_tmsblue_16x16.gif">&nbsp;TruMedical</a>
+			<img src="/images/menus/square_tmsblue_16x16.gif">&nbsp;About TruMedical</a>
 		<div class="menu_separator"></div>
 	
 		<!-- menu item: PATIENTS ————————————————— -->
 
 		<a class="level1B helvetica" href="#" id="patients"  >
-			<img src="/images/menus/square_gray_16x16.gif">&nbsp;Patients</a>
+			<img src="/images/menus/square_orange_FFA500_16x16.gif">&nbsp;Patients</a>
 		<div class="menu_separator"></div>
 	
 		<!-- menu item: PROVIDERS ————————————————— -->
 		<a class="level1B helvetica" href="#" id="providers">
-			<img src="/images/menus/square_gray_16x16.gif">&nbsp;Providers</a>
+			<img src="/images/menus/square_orange_FFA500_16x16.gif">&nbsp;Providers</a>
 		<div class="menu_separator"></div>
 		<!-- popup which becomes visible when user clicks this menu item -->
 
 		<!-- menu item: PAYORS ————————————————— -->
 		<a class="level1B helvetica" href="#" id="payors">
-			<img src="/images/menus/square_gray_16x16.gif">&nbsp;Payors</a>
+			<img src="/images/menus/square_orange_FFA500_16x16.gif">&nbsp;Payors</a>
 		
 	</div> <!-- end div 'menu_main' -->
 		
