--- a/public/stylesheets/left_nav_popups_test.css
+++ b/public/stylesheets/left_nav_popups_test.css
@@ -39,7 +39,7 @@
 div.subcategories { }
 div.subcategory {width: 120px; margin-right:10px; margin-bottom:10px; float:left; height:120px;
 	background-color:#E6E6E6;}
-div.subcategoryName { padding:86px 2px 4px 2px;text-align:center;} /* padding: within div.subcategory */
+div.subcategoryName { padding:86px 2px 4px 2px;text-align:center; line-height:14px;} /* padding: within div.subcategory */
 div.subcategory { border: 1px solid gainsboro;} 
 div.subcategory a:hover { color:white; padding:} 
 
